--- a/segurenta/src/app/components/login/login.component.html
+++ b/segurenta/src/app/components/login/login.component.html
@@ -3,18 +3,19 @@
 </div>
 <mat-grid-list cols="12" rowHeight="1:3">
     <mat-grid-tile colspan="6">
-        <form class="my-form">
+        <form class="my-form" [formGroup]="loginForm" (ngSubmit)="logIn()" novalidate>
             <mat-form-field class="full-width">
-                <input type="email" class="input-form" matInput placeholder="Correo Electrónico" [formControl]="email" required>
-                <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                <input type="email" class="input-form" matInput placeholder="Correo Electrónico" formControlName="email" required>
+                <mat-error *ngIf="loginForm.get('email').invalid">{{getErrorMessage()}}</mat-error>
             </mat-form-field>
             <mat-form-field class="full-width">
-                <input type="password" class="input-form" matInput placeholder="Contraseña" [type]="hide ? 'password' : 'text'" [formControl]="password" required>
+                <input [type]="hide ? 'password' : 'text'" class="input-form" matInput placeholder="Contraseña" formControlName="password" required>
                 <fa-icon *ngIf="hide" matSuffix (click)="hide = !hide" [icon]="['fas', 'eye-slash']" size="2x"></fa-icon>
                 <fa-icon *ngIf="!hide" matSuffix (click)="hide = !hide" [icon]="['fas', 'eye']" size="2x"></fa-icon>
-                <mat-error *ngIf="password.invalid">{{getErrorMessagePass()}}</mat-error>
+                <mat-error *ngIf="loginForm.get('password').invalid">{{getErrorMessagePass()}}</mat-error>
             </mat-form-field>
-            <a routerLink="/password-recovery">Recuperar mi contraseña</a>
+            <a routerLink="/password-recovery" class="full-width">Recuperar mi contraseña</a>
+            <button type="submit" class="custom-button full-width" mat-raised-button color="primary">Ingresar</button>
         </form>
     </mat-grid-tile>
     <mat-grid-tile colspan="1">
@@ -38,6 +39,6 @@
 
 <mat-dialog-actions>
     <div style="">
-        <button class="custom-button" mat-raised-button color="primary">Ingresar</button>
+        <button type="submit" class="custom-button" mat-raised-button color="primary" (click)="logIn(email.value, password.value, $event)">Ingresar</button>
     </div>
 </mat-dialog-actions>
