--- a/segurenta/src/app/components/home/home.component.html
+++ b/segurenta/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="bg-img">
     <!-- <img class="bg-img" src="./assets/img/bgHome.png"> -->
     <mat-grid-list cols="3" rowHeight="2:1">
-        <mat-grid-tile>1</mat-grid-tile>
-        <mat-grid-tile>2</mat-grid-tile>
-        <mat-grid-tile>3</mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
         <mat-grid-tile>
             <mat-list role="list">
                 <mat-list-item role="listitem" style="margin-bottom: 20%;">
@@ -31,8 +31,8 @@
         <mat-grid-tile>
             <input type="text" class="input-search">
         </mat-grid-tile>
-        <mat-grid-tile>6</mat-grid-tile>
-        <mat-grid-tile>7</mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
         <mat-grid-tile>
             <button mat-button>
                 <img src="./assets/img/appstore.png">
@@ -41,7 +41,7 @@
                     <img src="./assets/img/googleplay.png">
                 </button>
         </mat-grid-tile>
-        <mat-grid-tile>9</mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
     </mat-grid-list>
 </div>
 
