--- a/segurenta/src/app/components/register/register.component.html
+++ b/segurenta/src/app/components/register/register.component.html
@@ -1,4 +1,71 @@
-<mat-card class="my-card">
+<!-- <mat-grid-list cols="12" rowHeight="100px">
+    <mat-grid-tile colspan="1" rowspan="3" style="border-right: black 1px solid; ">
+        <p>Rentar</p>
+        <p>Publicar</p>
+        <p>Propietario</p>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="3" rowspan="3">
+
+    </mat-grid-tile>
+</mat-grid-list> -->
+
+<div class="txt-right">
+    <h2 mat-dialog-title><small class="txt-title-muted">Registro </small><span class="txt-title"> {{ title }}</span></h2>
+</div>
+<mat-grid-list cols="12" rowHeight="1:5">
+    <mat-grid-tile colspan="6">
+        <form class="my-form" [formGroup]="registerForm" (ngSubmit)="register()" novalidate="novalidate">
+            <mat-form-field class="full-width">
+                <input type="text" class="input-form" matInput placeholder="Nombre(s)" [(ngModel)]="renter.names" formControlName="names" required>
+                <mat-error *ngIf="registerForm.get('names').invalid">{{getErrorMessageNames()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field style="padding-right: 10%;">
+                <input type="text" class="input-form" matInput placeholder="Apellido Paterno" [(ngModel)]="renter.firstLastName" formControlName="firstLastName" required>
+                <mat-error *ngIf="registerForm.get('firstLastName').invalid">{{getErrorMessageF()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <input type="text" class="input-form" matInput placeholder="Apellido Materno" [(ngModel)]="renter.secondLastName" formControlName="secondLastName" required>
+                <mat-error *ngIf="registerForm.get('secondLastName').invalid">{{getErrorMessageS()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="full-width">
+                <input type="tel" class="input-form" matInput placeholder="Teléfono" [(ngModel)]="renter.phoneNumber" formControlName="phoneNumber" required>
+                <mat-error *ngIf="registerForm.get('phoneNumber').invalid">{{getErrorMessagePhone()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="full-width">
+                <input type="email" class="input-form" matInput placeholder="Correo Electrónico" [(ngModel)]="renter.email" formControlName="email" required>
+                <mat-error *ngIf="registerForm.get('email').invalid">{{getErrorMessageEmail()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="full-width">
+                <input [type]="hide ? 'password' : 'text'" class="input-form" matInput placeholder="Contraseña" #renter.password formControlName="password" required>
+                <fa-icon *ngIf="hide" matSuffix (click)="hide = !hide" [icon]="['fas', 'eye-slash']"></fa-icon>
+                <fa-icon *ngIf="!hide" matSuffix (click)="hide = !hide" [icon]="['fas', 'eye']"></fa-icon>
+                <mat-error *ngIf="registerForm.get('password').invalid">{{getErrorMessagePass()}}</mat-error>
+            </mat-form-field>
+            <button class="custom-button full-width" style="margin-top: 5%;" mat-raised-button color="primary">Registrarme</button>
+            <small class="txt-muted">Al registrarte aceptas los <a class="alert-light">Términos y Condiciones</a>y las <a class="alert-light">Políticas de Privacidad</a>.</small>
+        </form>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="1">
+        <h1 class="txt-muted">ó</h1>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="5">
+        <div class="example-button-row">
+            <h1 class="txt-muted full-width">Ingresar con:</h1>
+            <div class="flex">
+                <button mat-fab class="btn-black">
+                            <fa-icon [icon]="['fab', 'facebook-f']" size="2x"></fa-icon>
+                        </button>
+                <button mat-fab class="btn-black">
+                            <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
+                        </button>
+            </div>
+        </div>
+
+    </mat-grid-tile>
+</mat-grid-list>
+
+
+<!-- <mat-card class="my-card">
     <mat-card-header>
         <mat-card-title>
             <button m-button (click)="changeRegister(1)">Rentar</button>
@@ -156,4 +223,4 @@
         </mat-grid-list>
     </mat-card-content>
 
-</mat-card>
+</mat-card> -->
