--- a/segurenta/src/app/components/login/login.component.css
+++ b/segurenta/src/app/components/login/login.component.css
@@ -1,8 +1,8 @@
-.my-form {
+/* .my-form {
     min-width: 150px;
     max-width: 500px;
     width: 100%;
-}
+} */
 
 .full-width-dialog {
     margin-left: 10%;
