--- a/segurenta/src/app/components/home/home.component.css
+++ b/segurenta/src/app/components/home/home.component.css
@@ -1,17 +1,4 @@
-/* .head-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    max-height: 100%;
-    margin: auto;
-    overflow: auto;
-    z-index: -1;
-    width: 100%;
-    max-width: 1920px;
-    background-size: 100%;
-} */
-
+/* 
 .bg-img {
     background-image: url('../../../assets/img/bgHome.png');
     height: 100%;
@@ -42,46 +29,29 @@
     min-height: 100%;
     width: 100%;
 }
+ */
 
-
-/* .bg-img {
-    background-image: url('../../../assets/img/bgHome.png');
-    opacity: 1;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
-
-
-/* 
-div {
-    display: block;
-} 
-
-#overlay-bg {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    z-index: 1;
-    background-size: cover;
-    background-position: center;
-    transition: opacity 1s;
+.img-wrapper {
+    position: relative;
 }
 
-#overlay {
+.img-responsive {
+    width: 100%;
+    height: auto;
+}
+
+.img-overlay {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.25);
-    z-index: 0;
-    opacity: 0;
-    transition: opacity 1s;
-}*/
+    text-align: center;
+}
 
-;
+.img-overlay:before {
+    content: ' ';
+    display: block;
+    /* adjust 'height' to position overlay content vertically */
+    height: 30%;
+}
