--- a/segurenta/src/app/components/home/home.component.html
+++ b/segurenta/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="bg-img">
-    <!-- <img class="bg-img" src="./assets/img/bgHome.png"> -->
+<!-- <div class="bg-img">
+    // <img class="bg-img" src="./assets/img/bgHome.png">
     <mat-grid-list cols="3" rowHeight="2:1">
         <mat-grid-tile></mat-grid-tile>
         <mat-grid-tile></mat-grid-tile>
@@ -44,29 +44,14 @@
         <mat-grid-tile></mat-grid-tile>
     </mat-grid-list>
 </div>
-
-<!-- <div class="head-background">
-
-            <div id="overlay-bg" class="bg"></div>
-            <div id="overlay" style="opacity: 1;"></div>
-
-        </div> -->
 <h1>
     <legend>Propiedades Más Recientes <button mat-fab style="background-color: black">
             <fa-icon [icon]="['fas', 'plus']" size="2x"></fa-icon>
         </button></legend>
 </h1>
 <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
-
-    <!-- <mat-grid-list cols="4" rowHeight="2:1">
-            <mat-grid-tile>
-                
-            </mat-grid-tile>
-        </mat-grid-list> -->
-
     <mat-card class="card-picture" *ngFor="let picture of pictures">
         <mat-card-title fxLayout.gt-xs="row" fxLayout.xs="column">
-            <!-- <span fxFlex="80%">{{picture.title}}</span> -->
         </mat-card-title>
         <img mat-card-image [src]="picture.img">
         <mat-card-content>
@@ -79,4 +64,283 @@
         </mat-card-content>
     </mat-card>
 
+</div> -->
+
+
+
+<!-- <mat-toolbar>
+    <mat-toolbar-row style="padding: 0%; margin:0%;height: 100%;background-position: center;background-repeat: no-repeat;background-size: cover;">
+        <img src="./assets/img/bgHome.png" style="width: 100%">
+    </mat-toolbar-row>
+
+    <mat-toolbar-row style="height:100%">
+        <h1>
+            <legend>Propiedades Más Recientes <button mat-fab style="background-color: black">
+                            <fa-icon [icon]="['fas', 'plus']" size="2x"></fa-icon>
+                        </button></legend>
+        </h1>
+        <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+            <mat-card class="card-picture" *ngFor="let picture of pictures">
+                <mat-card-title fxLayout.gt-xs="row" fxLayout.xs="column">
+                </mat-card-title>
+                <img mat-card-image [src]="picture.img">
+                <mat-card-content>
+                    <p>
+                        <fa-icon [icon]="['fas', 'expand-arrows-alt']" fxFlex="10%"></fa-icon> 50&nbsp;&nbsp;
+                        <fa-icon [icon]="['fas', 'bed']" fxFlex="10%"></fa-icon> 2&nbsp;&nbsp;
+                        <fa-icon [icon]="['fas', 'toilet']" fxFlex="10%"></fa-icon> 1&nbsp;&nbsp;
+                        <fa-icon [icon]="['fas', 'plus-circle']" size="2x"></fa-icon>
+                    </p>
+                </mat-card-content>
+            </mat-card>
+
+        </div>
+    </mat-toolbar-row>
+
+    <mat-toolbar-row>
+        <span>Third Line</span>
+        <span class="example-spacer"></span>
+    </mat-toolbar-row>
+
+    <mat-toolbar-row>
+        <span>Second Line</span>
+    </mat-toolbar-row>
+
+    <mat-toolbar-row style="height: 100%; background-color: #0D62B7;">
+        <mat-card class="card-picture">
+            <img mat-card-image src="https://e41ef2ad9891d7dd1442-94bb8684ffa0a53fb3624a3fb44b51a2.ssl.cf1.rackcdn.com/cliente/1398/fotosproductos/departamento-residencial-en-renta-en-colonia-jardines-de-virginia-boca-del-rio-16869_thumb.jpg">
+        </mat-card>
+        <span fxFlex></span>
+        <mat-card class="card-picture">
+            <img mat-card-image src="https://e41ef2ad9891d7dd1442-94bb8684ffa0a53fb3624a3fb44b51a2.ssl.cf1.rackcdn.com/cliente/1398/fotosproductos/departamento-residencial-en-renta-en-colonia-jardines-de-virginia-boca-del-rio-16869_thumb.jpg">
+        </mat-card>
+    </mat-toolbar-row>
+</mat-toolbar> -->
+
+<div class="container-fluid p-0">
+    <!-- First section: Header  -->
+    <div class="row col-sm-12 m-0 p-0">
+        <img src="./assets/img/bgHome.png" class="img-fluid w-100" />
+        <div class="img-overlay">
+            <div class="col-2">
+                <div class="col-sm-12 mt-2 mb-2">
+                    <a [href]="linkFacebook" target="_blank">
+                        <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
+                            <fa-icon [icon]="[ 'fab', 'facebook-f']" size="2x"></fa-icon>
+                        </button>
+                    </a>
+                </div>
+                <div class="col-sm-12 mb-2">
+                    <a [href]="linkInstagram" target="_blank">
+                        <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
+                            <fa-icon [icon]="[ 'fab', 'instagram']" size="2x"></fa-icon>
+                        </button>
+                    </a>
+                </div>
+                <div class="col-sm-12 mb-2">
+                    <a [href]="linkLinkedIn" target="_blank">
+                        <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
+                            <fa-icon [icon]="[ 'fab', 'linkedin-in']" size="2x"></fa-icon>
+                        </button>
+                    </a>
+                </div>
+                <div class="col-sm-12 mb-2">
+                    <a [href]="linkTwitter" target="_blank">
+                        <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
+                            <fa-icon [icon]="[ 'fab', 'twitter']" size="2x"></fa-icon>
+                        </button>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- Second section: Propiedades Màs Recientes  -->
+    <div class="row col-sm-12 m-0 p-0">
+        <div class="col-sm-12 my-4">
+            <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
+        </div>
+        <div class="col-sm-12">
+            <div class="card-columns">
+                <div class="card border-light" *ngFor="let picture of pictures">
+                    <img class="card-img-top" [src]="picture.img">
+                    <div class="card-img-overlay col-sm-12 align-bottom">
+                        <div class="card-title">
+                            <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
+                            <div class="text-white d-inline float-right">
+                                <fa-icon class="pr-3" [icon]="['fas', 'share-alt']" size="2x"></fa-icon>
+                                <fa-icon class="pr-3" [icon]="['far', 'heart']" size="2x"></fa-icon>
+                                <fa-icon [icon]="['far', 'comment-alt']" size="2x"></fa-icon>
+                            </div>
+                        </div>
+                        <div class="card-text d-flex bd-highlight">
+                            <div class="card-text w-100">
+                                <p class="h4 text-white">{{ picture.title }}</p>
+                                <p class="card-text text-white">{{ picture.location }}</p>
+                            </div>
+                            <div class="card-text flex-shrink-1">
+                                <p class="h4 text-white">${{ picture.price }}</p>
+                                <p class="card-text text-white text-right">{{ picture.period }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <fa-icon [icon]="['fas', 'expand-arrows-alt']" size="2x"></fa-icon> 50&nbsp;&nbsp;
+                            <fa-icon [icon]="['fas', 'bed']" size="2x"></fa-icon> 2&nbsp;&nbsp;
+                            <fa-icon [icon]="['fas', 'toilet']" size="2x"></fa-icon> 1&nbsp;&nbsp;
+                            <!-- <fa-icon [icon]="['fas', 'plus-circle']" size="2x"></fa-icon> -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Third section -->
+    <div class="row col-sm-12 m-0 p-0" style="height: 400px">
+        <img src="./assets/img/imgPrueba.png" class="img-fluid w-100" />
+        <div class="img-overlay">
+            <div class="row align-items-center text-center p-0 m-0">
+                <div class="col-sm">
+                    <div class="col-sm-12 mx-0 p-0 my-4">
+                        <p class="h3 text-white"><strong>¿Quieres <span class="h1">Publicar</span>?</strong></p>
+                        <p class="h3 text-white"><strong>Unete a SeguRenta</strong></p>
+                    </div>
+                    <button class="btn btn-outline-dark m-1" type="button">Beneficios</button>
+                    <button class="btn btn-dark m-1" type="button">Regístrate</button>
+                </div>
+                <div class="col-sm">
+                    <div class="col-sm-12">
+                        <a class="bg-transparent m-1">
+                            <img src="./assets/img/appstore.png">
+                        </a>
+                        <a href="https://play.google.com/store/apps/details?id=in.loop.hdmakeover" class="bg-transparent m-1">
+                            <img src="./assets/img/googleplay.png">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Fourth section: Explorar -->
+    <div class="row col-12 m-0 p-0">
+        <div class="col-sm" style="background-color: #0D62B7;border-right: 1px solid white;">
+            <div class="col-sm-12 mx-0 p-0 my-4">
+                <h3 class="font-weight-bold text-white"><span class="txt-muted"><u>E</u>xplorar</span> Zonas </h3>
+            </div>
+            <div class="card-deck">
+                <div class="card border-0 mb-3 bg-transparent" style="max-width: 15rem;" *ngFor="let picture of picturesZone">
+                    <img class="card-img-top" [src]="picture.img">
+                    <div class="card-img-overlay right">
+                        <a class="badge rounded-circle badge-dark align-middle" style="width: 70px; height: 70px;">
+                            <h6 class="text-white">+{{ countNews }}<br>NUEVAS</h6>
+                        </a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-white">Zona {{ picture.zone }}</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm" style="background-color: #0D62B7;border-left: 1px solid white;">
+            <div class="col-sm-12 mx-0 p-0 my-4">
+                <h3 class="font-weight-bold text-white"><span class="txt-muted"><u>E</u>xplorar</span> Categorías </h3>
+            </div>
+            <div class="card-deck">
+                <div class="card border-0 mb-3 bg-transparent" style="max-width: 15rem;" *ngFor="let picture of picturesZone">
+                    <img class="card-img-top" [src]="picture.img">
+                    <div class="card-img-overlay">
+                        <a class="badge rounded-circle badge-dark align-middle" style="width: 70px; height: 70px;">
+                            <h6 class="text-white">+{{ countNews }}<br>NUEVAS</h6>
+                        </a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-white">{{ picture.categ }}</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row col-sm-12">
+        <div class="col-sm-12">
+            <div class="col-sm-6">
+
+            </div>
+            <div class="col-sm-6">
+
+            </div>
+        </div>
+
+    </div>
 </div>
+
+<!-- <div class="container-fluid">
+    <div class="row col-sm-12">
+        <img src="./assets/img/bgHome.png">
+    </div>
+    <div class="row col-sm-12">
+        <div class="col-sm-12">
+            <h3 class="font-weight-bold"><span class="txt-muted"><u>P</u>ropiedades</span> Más Recientes <button mat-mini-fab style="background-color: black">
+                    <fa-icon [icon]="['fas', 'plus']" size="2x"></fa-icon>
+                </button></h3>
+
+        </div>
+        <div class="card" style="width: 18rem;" *ngFor="let picture of pictures">
+            <img class="card-img-top" [src]="picture.img">
+            <div class="card-img-overlay">
+                <h5 class="card-title text-white">{{ picture.title }}</h5>
+                <p class="card-text">Last updated 3 mins ago</p>
+            </div>
+            <div class="card-body">
+                <p class="card-text">
+                    <fa-icon [icon]="['fas', 'expand-arrows-alt']" fxFlex="10%"></fa-icon> 50&nbsp;&nbsp;
+                    <fa-icon [icon]="['fas', 'bed']" fxFlex="10%"></fa-icon> 2&nbsp;&nbsp;
+                    <fa-icon [icon]="['fas', 'toilet']" fxFlex="10%"></fa-icon> 1&nbsp;&nbsp;
+                    <fa-icon [icon]="['fas', 'plus-circle']" size="2x"></fa-icon>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="row col-sm-12">
+    </div>
+    <div class="row col-sm-12" style="background-color: #0D62B7">
+        <div class="col-sm-6">
+            <h3 class="font-weight-bold text-white"><span class="txt-muted"><u>E</u>xplorar</span> Zonas <button mat-mini-fab style="background-color: black">
+                                <fa-icon [icon]="['fas', 'plus']" size="2x"></fa-icon>
+                            </button></h3>
+            <div class="card-group">
+                <div class="card border-0 mb-3 bg-transparent" style="max-width: 15rem;" *ngFor="let picture of picturesZone">
+                    <img class="card-img-top" [src]="picture.img">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title text-white">{{ picture.title }}</h5>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-white">Zona {{ picture.zone }}</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <h3 class="font-weight-bold text-white"><span class="txt-muted"><u>E</u>xplorar</span> Categorías <button mat-mini-fab style="background-color: black">
+                                <fa-icon [icon]="['fas', 'plus']" size="2x"></fa-icon>
+                            </button></h3>
+            <div class="card-group">
+                <div class="card border-0 mb-3 bg-transparent" style="max-width: 15rem;" *ngFor="let picture of picturesZone">
+                    <img class="card-img-top" [src]="picture.img">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title text-white">{{ picture.title }}</h5>
+                        <p class="card-text">Last updated 3 mins ago</p>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title text-white">{{ picture.categ }}</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
