--- a/segurenta/src/app/components/navbar/navbar.component.html
+++ b/segurenta/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,10 @@
-<mat-toolbar fxLayout="row" fxLayoutAlign="start center" class="nav-bg-transparent">
-    <span><a [routerLink]="['home']"><img class="nav-logo" src="./assets/img/logoSeguRenta_bco.png"></a></span>
-    <span fxFlex></span>
-    <button mat-stroked-button (click)="openRegister()" class="nav-btn">Registrarse</button>
-    <button mat-stroked-button (click)="openLogin()" class="nav-btn">Entrar</button>
-</mat-toolbar>
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+    <a class="navbar-brand" [routerLink]="['home']">
+        <img src="./assets/img/logoSeguRenta_bco.png" width="250" height="70" class="d-inline-block align-top">
+    </a>
+
+    <div class="collapse navbar-collapse d-flex justify-content-end">
+        <button class="btn btn-sm btn-outline-light m-1" type="button" (click)="openRegister()">Registrarse</button>
+        <button class="btn btn-sm btn-outline-light m-1" type="button" (click)="openLogin()">Entrar</button>
+    </div>
+</nav>
