--- a/segurenta/src/app/components/login/login.component.html
+++ b/segurenta/src/app/components/login/login.component.html
@@ -16,9 +16,9 @@
             </mat-form-field>
             <a routerLink="/password-recovery" class="full-width">Recuperar mi contraseña</a>
             <button type="submit" class="btn-rounded full-width" mat-raised-button>Ingresar</button>
-            <div *ngIf="invalidLogin" class="error">
+            <!-- <div *ngIf="invalidLogin" class="error">
                 <div>Invalid credentials.</div>
-            </div>
+            </div> -->
         </form>
     </mat-grid-tile>
     <mat-grid-tile colspan="1">
