--- a/segurenta/src/app/components/home-broker/home-broker.component.css
+++ b/segurenta/src/app/components/home-broker/home-broker.component.css
@@ -24,19 +24,14 @@
 }
 
 input.input-transparent {
-    background: rgba(255, 255, 255, 0.4) !important;
-    border: none !important;
+    background: rgba(255, 255, 255, 0) !important;
     height: 20%;
     border-radius: 10px;
     font-size: 22pt !important;
-    color: white;
-}
-
-input.input-transparent::placeholder {
-    color: #ddd;
+    border-right-color: #ddd !important;
 }
 
 .btn-transparent {
-    background-color: rgba(255, 255, 255, 0.4) !important;
-    border-color: none !important;
+    background-color: rgba(255, 255, 255, 0) !important;
+    border-color: #ddd !important;
 }
