--- a/segurenta/src/app/components/home-broker/home-broker.component.css
+++ b/segurenta/src/app/components/home-broker/home-broker.component.css
@@ -35,3 +35,63 @@ input.input-transparent {
     background-color: rgba(255, 255, 255, 0) !important;
     border-color: #ddd !important;
 }
+
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+
+/* Bottom left text */
+
+.bottom-left {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+}
+
+
+/* Top left text */
+
+.top-left {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+}
+
+
+/* Top right text */
+
+.top-right {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+}
+
+
+/* Bottom right text */
+
+.bottom-right {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+}
+
+.img-opacity {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+
+/* Centered text */
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.img-opacity:hover {
+    background-color: rgba(0, 0, 0, 0);
+}
