--- a/segurenta/src/app/components/home-broker/home-broker.component.html
+++ b/segurenta/src/app/components/home-broker/home-broker.component.html
@@ -1,18 +1,7 @@
 <div class="container-fluid p-0">
     <!-- First section: Header  -->
-    <div class="row col-sm-12 m-0 p-0">
+    <div class="row col-sm-12 m-0 p-0" style="height: 600px;">
         <img src="./assets/img/imgPrueba2.png" class="img-fluid w-100 h-100" />
-        <div class="img-overlay">
-            <div class="row">
-                <div class="col-5">
-                    <p class="h3 text-white "><strong>Obtén el <span class="h1 ">10%</span></strong></p>
-                    <p class="h3 text-white "><strong>En </strong><span class="h1 ">todas</span></p>
-                    <p class="h3 text-white "><strong>tus comisiones</strong></p>
-                    <p class="h1 text-primary "><strong>Solo Febrero</strong></p>
-                </div>
-            </div>
-
-        </div>
     </div>
 
     <!-- Second section: Opciones -->
@@ -44,7 +33,7 @@
             </div>
             <div class="btn-group-vertical align-items-center mx-5">
                 <a>
-                    <button class="btn btn-outline-dark rounded-circle" style="height: 100px; width: 100px; color: white">
+                    <button (click)="openRegisterProperty()" class="btn btn-outline-dark rounded-circle" style="height: 100px; width: 100px; color: white">
                       <fa-icon [icon]="[ 'fas', 'plus']" size="2x"></fa-icon>
                     </button>
                 </a>
@@ -111,13 +100,13 @@
                         <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem; " *ngFor="let picture of picturesZone ">
                             <img class="card-img-top " [src]="picture.img ">
                             <div class="card-img-overlay col-sm-12">
-                                <div class="card-title">
+                                <div class="card-title d-flex flex-row align-items-start">
                                     <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
-                                    <div class="text-white d-inline float-right">
+                                    <div class="text-white text-right">
                                         <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon>
                                     </div>
                                 </div>
-                                <div class="card-text d-flex bd-highlight">
+                                <div class="card-text d-flex flex-row align-items-end bd-highlight">
                                     <div class="card-text w-100">
                                         <p class="text-white m-0">{{ picture.title }}</p>
                                         <p class="card-text text-white m-0">{{ picture.location }}</p>
@@ -171,7 +160,25 @@
                     <div class="card-deck mb-5">
                         <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem; " *ngFor="let picture of picturesZone ">
                             <img class="card-img-top " [src]="picture.img ">
-                            <div class="card-img-overlay col-sm-12">
+                            <div class="card-img-overlay p-0 img-opacity">
+                                <div class="card-title p-1">
+                                    <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                                    <div class="text-white d-inline float-right">
+                                        <a>
+                                            <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="card-text">
+                                    <div class="card-text bottom-left">
+                                        <p class="text-white">{{ picture.title }}<br>{{ picture.location }}</p>
+                                    </div>
+                                    <div class="card-text bottom-right">
+                                        <p class="text-white">${{ picture.price }}<br>{{ picture.period }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <div class="card-img-overlay col-sm-12">
                                 <div class="card-title">
                                     <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
                                     <div class="text-white d-inline float-right">
@@ -188,27 +195,27 @@
                                         <p class="card-text text-white text-right m-0">{{ picture.period }}</p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-deck mb-5 pt-5">
                         <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem; " *ngFor="let picture of picturesZone ">
                             <img class="card-img-top " [src]="picture.img ">
-                            <div class="card-img-overlay col-sm-12">
-                                <div class="card-title">
+                            <div class="card-img-overlay p-0 img-opacity">
+                                <div class="card-title p-1">
                                     <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
                                     <div class="text-white d-inline float-right">
-                                        <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon>
+                                        <a>
+                                            <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon>
+                                        </a>
                                     </div>
                                 </div>
-                                <div class="card-text d-flex bd-highlight">
-                                    <div class="card-text w-100">
-                                        <p class="text-white m-0">{{ picture.title }}</p>
-                                        <p class="card-text text-white m-0">{{ picture.location }}</p>
+                                <div class="card-text">
+                                    <div class="card-text bottom-left">
+                                        <p class="text-white">{{ picture.title }}<br>{{ picture.location }}</p>
                                     </div>
-                                    <div class="card-text flex-shrink-1 ">
-                                        <p class="text-white text-sm-right m-0">${{ picture.price }}</p>
-                                        <p class="card-text text-white text-right m-0">{{ picture.period }}</p>
+                                    <div class="card-text bottom-right">
+                                        <p class="text-white">${{ picture.price }}<br>{{ picture.period }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -228,13 +235,31 @@
             <div class="card-deck mb-3">
                 <div class="card border-light" *ngFor="let picture of pictures">
                     <img class="card-img-top" [src]="picture.img">
-                    <div class="card-img-overlay col-sm-12">
+                    <div class="card-img-overlay p-0 img-opacity">
+                        <div class="card-title p-1">
+                            <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
+                            <div class="text-white d-inline float-right">
+                                <a>
+                                    <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-text bottom-left">
+                                <p class="h4 text-white">{{ picture.title }}</p>
+                                <p class="card-text text-white">{{ picture.location }}</p>
+                            </div>
+                            <div class="card-text bottom-right">
+                                <p class="h4 text-white">${{ picture.price }}</p>
+                                <p class="card-text text-white text-right">{{ picture.period }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="card-img-overlay col-sm-12">
                         <div class="card-title">
                             <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
                             <div class="text-white d-inline float-right">
                                 <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
-                                <fa-icon class="pr-3 " [icon]="[ 'far', 'heart'] " size="2x "></fa-icon>
-                                <fa-icon [icon]="[ 'far', 'comment-alt'] " size="2x "></fa-icon>
                             </div>
                         </div>
                         <div class="card-text d-flex bd-highlight">
@@ -247,7 +272,7 @@
                                 <p class="card-text text-white text-right ">{{ picture.period }}</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -259,9 +284,9 @@
             <div class="col-sm-12 mx-0 p-0 my-4 ">
                 <h3 class="font-weight-bold text-white "><span class="txt-muted "><u>E</u>xplorar</span> Zonas </h3>
             </div>
-            <div class="card-deck ">
+            <div class="card-deck">
                 <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem; " *ngFor="let picture of picturesZone ">
-                    <img class="card-img-top " [src]="picture.img ">
+                    <img class="card-img-top" [src]="picture.img ">
                     <div class="card-img-overlay right ">
                         <a class="badge rounded-circle badge-dark align-middle " style="width: 70px; height: 70px; ">
                             <h6 class="text-white ">+{{ countNews }}<br>NUEVAS</h6>
